[tool.poetry]
name = "graiax-mockery"
version = "0.1.0"
description = "Mock for Mirai API HTTP v2."
authors = ["BlueGlassBlock <blueglassblock@outlook.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
